adding some animations

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>Alexiess</title>
   </head>
   <body>
+    
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
