--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <title>Alexiess Manalastas</title>
   </head>
   <body>
-    
-    <div id="root"></div>
+      
+<!--     <div id="root"></div> -->
+    <div>TEST</div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
