--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
       
 <!--     <div id="root"></div> -->
-    <div>TEST</div>
+    <h1>TEST</h1>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
