--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <body>
 
   <!--     <div id="root"></div> -->
-  <h1>TEST</h1>
+  <marquee behavior="scroll" direction="left">
+    <img src="./src/img/arj/arj1.png" width="120" height="80" alt="Natural" />
+    <img src="./src/img/arj/arj2.png" width="120" height="80" alt="Natural" />
+  </marquee>
   <script type="module" src="/src/index.jsx"></script>
 </body>
 
