--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/alexiess.svg" /> -->
+  <link rel="icon" type="image/svg+xml" href="/alexiess.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-
   <title>Alexiess Manalastas</title>
 </head>
-
 <body>
-
-  <!--     <div id="root"></div> -->
-  <marquee behavior="scroll" direction="left">
-    <img src="./src/img/arj/arj1.png" width="120" height="80" alt="Natural" />
-    <img src="./src/img/arj/arj2.png" width="120" height="80" alt="Natural" />
-  </marquee>
-  <script type="module" src="/src/index.jsx"></script>
+<div id="root"></div>
+  <!--  <marquee behavior="scroll" direction="left">
+           <img src="./src/img/arj/arj1.png" width="120" height="80" alt="Natural" />
+           <img src="./src/img/arj/arj2.png" width="120" height="80" alt="Natural" />
+        </marquee>  -->
+<script type="module" src="/src/index.jsx"></script>
 </body>
-
 </html>
