--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+pop<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -12,10 +12,6 @@
 </head>
 <body>
 <div id="root"></div>
-  <!--  <marquee behavior="scroll" direction="left">
-           <img src="./src/img/arj/arj1.png" width="120" height="80" alt="Natural" />
-           <img src="./src/img/arj/arj2.png" width="120" height="80" alt="Natural" />
-        </marquee>  -->
 <script type="module" src="/src/index.jsx"></script>
 </body>
 </html>
